# handler/deleteOpening.go
@@ -8,6 +8,18 @@ import (
 	"github.com/kayquesza/api-go-learning/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary      Delete Opening
+// @Description  Delete a new job opening
+// @Tags         opening
+// @Accept       json
+// @Produce      json
+// @Param id query string true "Opening Identification"
+// @Success      200      {object}  DeleteOpeningResponse
+// @Failure      400      {object}  ErrorResponse
+// @Failure      404      {object}  ErrorResponse
+// @Router       /opening [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
